--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -214,17 +214,8 @@ body::-webkit-scrollbar {
     cursor: pointer;
 }
 
-.perfil-info {
-    text-align: center;
-    margin-top: 20px;
-}
 
-.perfil-img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-}
+
 
 .btn-subir {
     background-color: #1d72b8;
@@ -1305,3 +1296,49 @@ body.dark{
     background-color: #232323;
     border-bottom-color: rgb(58, 62, 65);
 }
+
+
+/*Foto de perfil*/
+.perfil-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.perfil-info-imagen {
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+
+.perfil-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #ccc;
+}
+
+.upload-icon {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    background-color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.upload-icon img {
+    width: 20px;
+    height: 20px;
+}
+
+
