--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,10 @@ body::-webkit-scrollbar {
     height: auto; 
 }
 
+.dark .boton-retroceder img {
+    filter: invert(100%);
+}
+
 .logo-img {
     height: 130px;
     margin-right: 10px;
@@ -290,16 +294,6 @@ input:checked + .slider:before {
     cursor: pointer;
     display: block;
     margin: 20px auto 0;
-}
-
-.cerrar-sesion a{
-    color: black;
-    text-decoration: none;
-}
-
-.cerrar-sesion a{
-    color: black;
-    text-decoration: none;
 }
 
 /* ############################### FOOTER CSS ############################### */
@@ -622,17 +616,11 @@ input:checked + .slider:before {
     box-sizing: border-box; 
 }
 
-.texto-contrasena{
+.texto-contrasena,
+.cerrar-sesion a {
     color: black;
     text-decoration: none;
 }
-
-
-.texto-contrasena{
-    color: black;
-    text-decoration: none;
-}
-
 
 /* subir proyecto */
 .formulario-proyecto {
@@ -1235,7 +1223,8 @@ body.dark{
 }
 
 .header.dark,
-.dark .headerCTRLUSR {
+.dark .headerCTRLUSR,
+.dark .headerSoli {
     background-color: rgb(28, 30, 31);
     border-bottom-color: rgb(58, 62, 65);
     color: #ffffff; 
@@ -1297,8 +1286,36 @@ body.dark{
     border-bottom-color: rgb(58, 62, 65);
 }
 
+.dark .texto-contrasena,
+.dark .cerrar-sesion a {
+    color: #ffffff;
+}
 
-/*Foto de perfil*/
+.dark #proyectosAceptados,
+.dark #proyectosPendientes,
+.dark #userData {
+    background-color: rgb(28, 30, 31);
+}
+
+.dark .user-item {
+    background-color: #232323;
+}
+.dark .user-item:hover {
+    background-color: #2C2C2C;
+}
+/*
+.dark .icon{
+    background-color: #ffffff;
+}
+.dark .icon:hover{
+    background-color: #cacaca;
+}
+*/
+.dark .user-info{
+    color: #ffffff;
+}
+
+/* ################# Foto de perfil ################# */
 .perfil-info {
     display: flex;
     flex-direction: column;
