--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1022,9 +1022,19 @@ input:checked + .slider:before {
 }
 
 /* Estilo de la caja del contenido del modal */
-.modal-content, .modal-pdf-content {
+.modal-content {
     background-color: #fff;
     margin: 10% auto; 
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 600px; 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    animation: fadeIn 0.4s ease;
+}
+.modal-pdf-content {
+    background-color: #fff;
+    margin: auto;
     padding: 20px;
     border-radius: 8px;
     width: 80%;
