--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -72,18 +72,17 @@ body::-webkit-scrollbar {
 
 .logo-img {
     height: 130px;
-    margin-right: 10px;
+    margin-left: 20px;
 }
 
 .search-bar {
     display: flex;
     align-items: center;
     flex-grow: 1;
-    max-width: 500px;
     position: relative;
+    gap: 10px;
+    max-width: 500px;
 }
-
-
 
 .search-input {
     flex-grow: 1;
@@ -203,16 +202,10 @@ body::-webkit-scrollbar {
     align-items: center;
 }
 
-.menu-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .menu-header h2 {
+.menu-header h2 {
     flex-grow: 1;
     text-align: center;
-  }
+}
   
 .cerrar {
     background: none;
@@ -230,7 +223,7 @@ body::-webkit-scrollbar {
     color: white;
     border: none;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
     margin-top: 10px;
 }
@@ -1360,6 +1353,14 @@ body.dark{
     color: white;
 }
 
+.dark .menu-img{
+    filter: invert(100%);
+}
+
+
+
+
+
 /* ################# Foto de perfil ################# */
 .perfil-info {
     display: flex;
@@ -1406,21 +1407,7 @@ body.dark{
 
 /*Tags buscador*/
 /* Estilo para la barra de búsqueda */
-.search-bar {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 20px;
-}
 
-.search-input {
-    padding: 10px;
-    width: 250px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    outline: none;
-    transition: border-color 0.3s ease;
-}
 
 .search-input:focus {
     border-color: #007BFF;
@@ -1433,12 +1420,6 @@ body.dark{
 
 /* Estilo para el modal de tags */
 /* Estilo para la barra de búsqueda */
-.search-bar {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 20px;
-}
 
 .search-input {
     padding: 8px;
