--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -149,8 +149,8 @@ body::-webkit-scrollbar {
 }
 
 .profile-img {
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
     cursor: pointer;
     margin-right: 30px;
@@ -166,13 +166,13 @@ body::-webkit-scrollbar {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    
     position: fixed;
     top: 0;
     right: -2000px;
     left: auto;
     transition: right 1s ease, left 1s ease;
     z-index: 1000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .menu-abierto-pc {
@@ -321,6 +321,7 @@ input:checked + .slider:before {
 
 .footer-text {
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .social-icons a {
     margin: 0 10px;
@@ -350,6 +351,8 @@ input:checked + .slider:before {
     justify-content: center;
     align-items: center;
     width: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 .formulario {
@@ -395,9 +398,9 @@ input:checked + .slider:before {
     background-color: #0056b3;
 }
 
-.mensaje-error {
-    color: red;
-    margin-top: 20px;
+.mensaje-error,
+.mensajeResultado {
+    color: rgb(203, 56, 56);
 }
 
 .container-frases {
@@ -420,6 +423,7 @@ input:checked + .slider:before {
     bottom: 0;
     color: #fff;
     font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .banner-utu,
@@ -472,6 +476,7 @@ input:checked + .slider:before {
     transform: translateX(-50%);
     font-size: 24px;
     font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
@@ -493,6 +498,7 @@ input:checked + .slider:before {
     padding: 0;
     margin: 0;
     flex-wrap: wrap;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .h-conten {
     display: flex;
@@ -658,11 +664,14 @@ input:checked + .slider:before {
     margin: 0;
     font-size: 1.2em;
     color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .proyecto-info p {
     margin: 0;
     color: #555;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 /* Listas */
@@ -707,6 +716,45 @@ input:checked + .slider:before {
     width: 60px;
     height: 60px;
     margin-right: 20px;
+}
+
+.pdf-icon-animado {
+    width: 60px;
+    height: 60px;
+    margin-right: 20px;
+    cursor: pointer;
+    animation: head-nod 3s ease-in-out infinite; 
+}
+
+.pdf-icon-animado:hover {
+    animation: head-nod-hover 0.5s ease-in-out forwards;
+}
+
+@keyframes head-nod {
+    0%, 100% {
+      transform: rotate(0deg); 
+    }
+    50% {
+      transform: rotate(10deg); 
+    }
+    65% {
+      transform: rotate(-5deg); 
+    }
+    80% {
+      transform: rotate(3deg); 
+    }
+  }
+
+@keyframes head-nod-hover {
+    0% {
+        transform: translateY(0) rotate(0deg); 
+    }
+    50% {
+        transform: translateY(-5px) rotate(10deg); 
+    }
+    100% {
+        transform: translateY(0) rotate(0deg); 
+    }
 }
 
 .proyecto-info {
@@ -1008,6 +1056,7 @@ input:checked + .slider:before {
     max-width: 600px; 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     animation: fadeIn 0.4s ease;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .modal-pdf-content {
     background-color: #fff;
@@ -1143,6 +1192,7 @@ input:checked + .slider:before {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
@@ -1358,9 +1408,6 @@ body.dark{
 }
 
 
-
-
-
 /* ################# Foto de perfil ################# */
 .perfil-info {
     display: flex;
@@ -1424,7 +1471,7 @@ body.dark{
 .search-input {
     padding: 8px;
     width: 250px;
-    border-radius: 4px;
+    border-radius: 20px;
     border: 1px solid #ccc;
     outline: none;
     transition: border-color 0.3s ease;
@@ -1462,6 +1509,8 @@ body.dark{
     z-index: 999;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 .tags-modal.show {
