--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,9 +10,6 @@ body {
 }
 
 
-
-
-
 body::-webkit-scrollbar {
     display: none;
 }
@@ -214,8 +211,6 @@ body::-webkit-scrollbar {
     font-size: 20px;
     cursor: pointer;
 }
-
-
 
 
 .btn-subir {
@@ -535,6 +530,7 @@ input:checked + .slider:before {
 .noUsuarios {
     color: red;
     text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* ############################### Registrar usuarios ###############################*/
