--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -283,14 +283,6 @@ input:checked + .slider:before {
     transform: translateX(20px);
 }
 
-.cerrar-sesion {
-    background: none;
-    border: none;
-    color: #1d72b8;
-    cursor: pointer;
-    display: block;
-    margin: 20px auto 0;
-}
 
 /* ############################### FOOTER CSS ############################### */
 .footer {
@@ -618,9 +610,15 @@ input:checked + .slider:before {
 }
 
 .texto-contrasena,
-.cerrar-sesion a {
+.cerrar-sesion {
+    text-align: center;
     color: black;
     text-decoration: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: block;
+    margin: 20px auto 0;
 }
 
 /* subir proyecto */
