Joaquìn Tasks Terminado

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1178,22 +1178,6 @@ input:checked + .slider:before {
     border-bottom: 1px solid #ddd;
   }
   
-  .eliminarCruz {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: #ff0000; 
-    font-weight: bold;
-    font-size: 25px;
-    user-select: none; 
-  }
-  
-  .eliminarCruz:hover {
-    color: #cc0000; 
-    cursor: pointer; 
-  }
 
 @keyframes fadeIn {
     from { opacity: 0; }
@@ -1273,6 +1257,22 @@ input:checked + .slider:before {
 
 .fa-trash:hover {
     color: #d73833;
+}
+
+.resultados-integrantes {
+    cursor: pointer;
+}
+
+.integrantes-seleccionados ::marker{
+    color: red;
+}
+
+.dark .resultados-integrantes {
+    color: white;
+}
+
+.dark .integrantes-seleccionados{
+    color: white;
 }
 
 /* Solicitudes de proyectos */
