--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,10 +85,6 @@ body::-webkit-scrollbar {
     width: 250px;
     transition: border-color 0.3s ease;
 }
-
-
-
-
 .btn-search {
     background: none;
     border: none;
@@ -125,16 +121,6 @@ body::-webkit-scrollbar {
     display: none;             
 }
 
-/*
-.boton-retroceder {
-    font-size: 15px;
-    margin-right: 15px; 
-    position: absolute;
-    left: 5%;
-    top: 20%;
-}
-*/
-
 /*Nav menu*/
 
 .profile {
@@ -143,7 +129,7 @@ body::-webkit-scrollbar {
 }
 
 .profile-img {
-    height: 60px;
+    height: auto;
     width: 60px;
     border-radius: 50%;
     cursor: pointer;
@@ -421,20 +407,7 @@ input:checked + .slider:before {
 
 }
 
-/* ############################### MEDIA QUERYS ############################### */
 
-
-@media (max-width: 480px) {
-    .input-login {
-        width: auto; 
-        font-size: 16px;
-    }
-
-    .boton-enviar {
-        width: auto; 
-        font-size: 16px; 
-    }
-}
 
 
 
@@ -653,12 +626,7 @@ input:checked + .slider:before {
     box-sizing: border-box; 
 }
 
-.proyecto-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
-}
+
 
 .proyecto-info h3 {
     margin: 0;
@@ -773,19 +741,9 @@ input:checked + .slider:before {
     color: #666;
 }
 
-/* Responsivo */
-@media (max-width: 768px) {
-    .proyecto-item {
-        flex-direction: column;
-        align-items: flex-start;
-    }
 
-    .pdf-icon {
-        margin-bottom: 10px;
-    }
-}
 
-/* ############################### Media Queries ###############################*/
+/* ############################### Media Queries de 1024 ###############################*/
 @media (max-width: 1024px) {
     .container {
         flex-direction: column;
@@ -817,7 +775,7 @@ input:checked + .slider:before {
         display: none; 
     }
 }
-
+/* ############################### Media Queries de 768px ###############################*/
 @media (max-width: 768px) {
     
     .menu-img {
@@ -838,9 +796,6 @@ input:checked + .slider:before {
         max-width: none; 
     }
 
-    .input-login {
-        width: auto; 
-    }
 
     .headerCTRLUSR {
         display: flex;
@@ -998,8 +953,17 @@ input:checked + .slider:before {
         padding: 10px; 
     }
 
+    .proyecto-item {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
+    .pdf-icon {
+        margin-bottom: 10px;
+    }
 }
+
+/* ############################### MEDIA QUERYS DE 480 PX ############################### */
 
 @media (max-width: 480px) {
     .input-login,
@@ -1009,28 +973,24 @@ input:checked + .slider:before {
         padding: 8px;
     }
 
-
-
+    .input-login {
+        width: auto; 
+    }
     .formulario-edicion label,
     .formulario-registro label {
         font-size: 12px; 
         margin-bottom: 6px; 
-    }
-}
-
-
-
-@media (max-width: 480px) {
-    .input-login {
-        width: auto; 
-        font-size: 16px;
     }
 
     .boton-enviar {
         width: auto; 
         font-size: 16px; 
     }
+
 }
+
+
+
 
 /*Modales*/
 .modal, .modal-pdf {
@@ -1375,14 +1335,7 @@ body.dark{
 .dark .user-item:hover {
     background-color: #2C2C2C;
 }
-/*
-.dark .icon{
-    background-color: #ffffff;
-}
-.dark .icon:hover{
-    background-color: #cacaca;
-}
-*/
+
 .dark .user-info{
     color: #ffffff;
 }
@@ -1405,10 +1358,7 @@ body.dark{
     color: rgb(0, 0, 0);
 }
 
-.dark .input-proyecto{
- 
 
-}
 
 .dark .tags-modal{
     background-color: #232323;
@@ -1603,53 +1553,7 @@ body.dark{
     display: block;
 }
 
-.notificacion {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background-color: #4caf50; 
-    color: white;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
-    transition: opacity 0.5s ease, transform 0.5s ease;
-    opacity: 0;
-    transform: translateY(-20px);
-}
 
-.notificacion.mostrar {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.notificacion.error {
-    background-color: #f44336; /
-}
-
-
-/* estilo para las confirmaciones*/
-.confirmacion-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.confirmacion-contenido {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    text-align: center;
-    width: 300px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-}
 
 
 .btn-confirmar, .btn-cancelar {
